--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.3.20",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-paper": "^5.11.1",
     "react-native-radio-buttons-group": "^3.0.5",
