--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.1",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
