--- a/package.json
+++ b/package.json
@@ -11,21 +11,29 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-community/geolocation": "^3.1.0",
+    "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-actions-sheet": "^0.8.29",
     "react-native-axios": "^0.17.1",
     "react-native-camera-kit": "^13.0.0",
+    "react-native-config": "^1.5.1",
     "react-native-element-dropdown": "^2.10.0",
+    "react-native-fbsdk-next": "^12.1.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-image-crop-picker": "^0.40.1",
     "react-native-image-picker": "^7.0.2",
+    "react-native-maps": "^1.8.3",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.1",
     "react-native-radio-buttons-group": "^3.0.5",
     "react-native-reanimated": "^3.5.4",
@@ -36,7 +44,8 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
