--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-android-extensions"
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -83,17 +84,32 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    signingConfigs {
-        debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+   signingConfigs {
+    debug {
+        // storeFile file('debug.keystore')
+        // storePassword 'android'
+        // keyAlias 'androiddebugkey'
+        // keyPassword 'android'
+
+         storeFile file(MYAPP_UPLOAD_STORE_FILE)
+         storePassword MYAPP_UPLOAD_STORE_PASSWORD
+         keyAlias MYAPP_UPLOAD_KEY_ALIAS
+         keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+    }
+
+    release {
+        if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+            storeFile file(MYAPP_UPLOAD_STORE_FILE)
+            storePassword MYAPP_UPLOAD_STORE_PASSWORD
+            keyAlias MYAPP_UPLOAD_KEY_ALIAS
+            keyPassword MYAPP_UPLOAD_KEY_PASSWORD
         }
     }
+}
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            resValue "string", "GOOGLE_MAP_API_KEY", project.env.get("GOOGLE_MAP_API_KEY")
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
@@ -101,6 +117,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            resValue "string", "GOOGLE_MAP_API_KEY", project.env.get("GOOGLE_MAP_API_KEY")
         }
     }
 }
@@ -108,7 +125,7 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
-
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
