--- a/Holiday_Assignment/package.json
+++ b/Holiday_Assignment/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-firebase/app": "^18.8.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
@@ -19,6 +20,8 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "formik": "^2.4.5",
+    "install": "^0.13.0",
+    "npm": "^10.4.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-axios": "^0.17.1",
